[package]
name = "cnctd_redis"
version = "0.1.9"
edition = "2021"
authors = ["Connected Dot Inc.", "Kyle Ebner <kyle@cnctd.world>"]
description = "Custom wrapper for Redis support"
license = "MIT"
repository = "https://github.com/Connected-Dot/cnctd_redis"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.100"
r2d2 = "0.8.10"
r2d2_redis = "0.14.0"
redis = "1.0.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
state = "0.6.0"
